# programming-news-summary-tool

application/codezine-scraper/scraper/scraper/: items.py
application/codezine-scraper/scraper/scraper/spiders/: codezine_news.py
application/codezine_scraper/: pyproject.toml
application/codezine_scraper/scraper/scraper/: pipelines.py
application/codezine_scraper/scraper/scraper/data_access/dynamodb/: news_table_data_access.py
application/codezine_scraper/scraper/scraper/spiders/: codezine_news.py
codezine-scraper/: pyproject.toml
infra/: .gitignore  README.md  package-lock.json  package.json
infra/lambda/codezine_scraper/: index.py  main.py  pyproject.toml  scraper.py
infra/lambda/codezine_scraper/const/: domain.py
infra/lambda/codezine_scraper/data_access/dynamodb/: news_table_data_access.py
infra/lambda/codezine_scraper/data_access/s3/: pnst_bucket_data_access.py
infra/lambda/codezine_scraper/enum/: code.py
infra/lambda/codezine_scraper/model/: news_data.py
infra/lambda/codezine_scraper/parser/: article_parser.py  news_parser.py
infra/lambda/generate_markdown/: generate.py  index.py  pyproject.toml
infra/lambda/generate_markdown/const/: codezine.py
infra/lambda/generate_markdown/data_access/s3/: pnst_bucket_data_access.py
infra/lambda/generate_markdown/model/: summary_data.py
infra/lambda/summarize_news/: index.py  pyproject.toml  summarize.py
infra/lambda/summarize_news/const/: codezine.py
infra/lambda/summarize_news/data_access/api/: generative_ai_api_data_access.py
infra/lambda/summarize_news/data_access/s3/: pnst_bucket_data_access.py
infra/lambda/summarize_news/data_access/secrets_manager/: generative_ai_secrets_data_access.py
infra/lambda/summarize_news/model/: news_data.py  summary_data.py
infra/lambda/summary_news/: pyproject.toml  summarize.py
infra/lambda/summary_news/data_access/api/: generative_ai_api_data_access.py
infra/lambda/summary_news/data_access/secrets_manager/: generative_ai_secrets_data_access.py
infra/lib/dynamo-db/: table-stack.ts
infra/lib/dynamo-db/resources/: news-table-resource.ts
infra/lib/lambda/: lambda-stack.ts
infra/lib/lambda/resources/: codezine-scaper-function-resource.ts  summarize-news-function-resource.ts
infra/lib/s3/: s3-stack.ts
infra/lib/s3/resources/: bucket-resource.ts
infra/lib/step-functions/: step-functions-stack.ts
infra/lib/step-functions/resources/: codezine-scraper-function-resource.ts  codezine-scraper-state-machine-resource.ts  generate_markdown-state-machine-resource.ts  summarize-news-state-machine-resource.ts
