[tool.poetry]
name = "codezine-scraper"
version = "0.1.0"
description = ""
authors = ["yoshi_d_24"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
boto3 = "^1.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
