[tool.poetry]
name = "summarize-news"
version = "0.1.0"
description = ""
authors = ["Tomohiro Yoshida <rollwithit0117@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aws-lambda-powertools = "^2.30.2"
boto3 = "^1.34.10"
dataclasses-json = "^0.6.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
