[tool.poetry]
name = "generate-markdown"
version = "0.1.0"
description = ""
authors = ["Tomohiro Yoshida <rollwithit0117@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aws-lambda-powertools = "^2.32.0"
boto3 = "^1.34.33"
requests = "^2.31.0"
dataclasses-json = "^0.6.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
