[tool.poetry]
name = "summarize-news"
version = "0.1.0"
description = ""
authors = ["Tomohiro Yoshida <rollwithit0117@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aws-lambda-powertools = "^2.30.2"
boto3 = "^1.34.10"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
